@@ -35,7 +35,7 @@ void CGI::upload(string *line)
     }
 
     string previous;
-    unique_ptr<char> buffer(new char[s_uploadBlock]);
+    unique_ptr<char[]> buffer(new char[s_uploadBlock]);
 
     next(line);                         // skip the blank line following the
                                         // content-type
