@@ -6,10 +6,17 @@
 namespace FBB
 {
 template <typename Iterator>
-class PtrIter: public std::iterator<std::input_iterator_tag, 
-                                    decltype(&*Iterator())>
+struct PtrIter
 {
-    Iterator d_iter;
+    using iterator_category = std::input_iterator_tag;
+    using difference_type   = std::ptrdiff_t;
+    using value_type        = decltype(&*Iterator());
+    using pointer           = value_type *;
+    using reference         = value_type &;
+
+
+    private:
+        Iterator d_iter;
 
     public:
         typedef decltype(&*Iterator()) PtrType;
