@@ -42,20 +42,26 @@ class TableSupport
             HLine(ColumnType margins, size_t row, size_t begin, size_t end);
         };
 
-        class const_iterator: public std::iterator<std::input_iterator_tag, 
-                                                                        Field>
+        struct const_iterator
         {
-            TableSupport const &d_support;
+            using iterator_category = std::input_iterator_tag;
+            using difference_type   = std::ptrdiff_t;
+            using value_type        = Field;
+            using pointer           = value_type *;
+            using reference         = value_type &;
+
+            private:
+                TableSupport const &d_support;
 
                 // iterators to vectors in d_elements. The elements of the 
                 // vectors contain the types of the column (SKIP, USE, etc)
                 // to determine the width of an element call 
                 // separator.width(iterator)
-            std::vector<size_t> const *d_vector;
-            std::vector<size_t>::const_iterator d_iter;
-            mutable Field d_field;
+                std::vector<size_t> const *d_vector;
+                std::vector<size_t>::const_iterator d_iter;
+                mutable Field d_field;
 
-            static std::vector<size_t> s_empty;
+                static std::vector<size_t> s_empty;
 
             public:
                 const_iterator(TableSupport const &support, size_t row, 
